[gd_scene load_steps=19 format=2]

[ext_resource path="res://mrowka.gd" type="Script" id=1]
[ext_resource path="res://mapa.gd" type="Script" id=2]
[ext_resource path="res://prawo.png" type="Texture" id=3]
[ext_resource path="res://dol.png" type="Texture" id=4]
[ext_resource path="res://grey.tres" type="Texture" id=5]
[ext_resource path="res://Timer.gd" type="Script" id=6]
[ext_resource path="res://bialy.png" type="Texture" id=7]
[ext_resource path="res://czarny.png" type="Texture" id=8]
[ext_resource path="res://mrowka.png" type="Texture" id=9]
[ext_resource path="res://lewo.png" type="Texture" id=10]
[ext_resource path="res://czcionka.tres" type="DynamicFont" id=11]
[ext_resource path="res://Id.gd" type="Script" id=12]
[ext_resource path="res://muzyczka.ogg" type="AudioStream" id=13]
[ext_resource path="res://applause.ogg" type="AudioStream" id=14]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=3]
0/name = "bialy.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 1 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "czarny.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "grey.tres 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "lewo",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "prawo",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "gora",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "dol",
"speed": 5.0
} ]

[node name="mapa" type="TileMap"]
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 65536, 2, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 2, 0, 65545, 2, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 2, 0, 131072, 2, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 2, 0, 131081, 2, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 2, 0, 196608, 2, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 2, 0, 196617, 2, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 2, 0, 262144, 2, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 2, 0, 262153, 2, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 2, 0, 327680, 2, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 2, 0, 327689, 2, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 2, 0, 393216, 2, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 2, 0, 393225, 2, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 2, 0, 458752, 2, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 2, 0, 458761, 2, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0 )
script = ExtResource( 2 )
poziom = 4

[node name="mrowka" type="AnimatedSprite" parent="."]
position = Vector2( 288, 288 )
frames = SubResource( 4 )
animation = "gora"
script = ExtResource( 1 )
speed = 128

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
script = ExtResource( 6 )

[node name="Instrukcja" type="Label" parent="."]
visible = false
margin_right = 576.0
margin_bottom = 576.0
text = "Pomaluj pola na bialo tak,a by mrowka po zejsciu z czarno-bialego obszaru i zakonczeniu ruchu pozostawila slad tak jak na rysunku po prawej. Pamietaj, mozesz uzyc maksymalnie 3 zamian. Gdy bedziesz gotowy, nacisnij 's' aby zaczac. W celu zresetowania poziomu, wcisnij 'r'."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zwyciestwo" type="Label" parent="."]
visible = false
margin_right = 1152.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "Gratulacje, wygrales!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Porazka" type="Label" parent="."]
visible = false
margin_right = 1152.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0.858824, 1, 1 )
text = "Niestety, nie tym razem.
 Sprobuj ponownie!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wygrana" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Id" type="Label" parent="."]
pause_mode = 2
margin_left = 704.0
margin_top = 512.0
margin_right = 1085.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "Level id: 40631758"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="licze" type="Label" parent="."]
margin_left = 72.0
margin_right = 520.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "Remaining changes: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="klucz" type="Label" parent="."]
margin_left = 640.0
margin_right = 1088.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "Key:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ins" type="Label" parent="."]
margin_top = 512.0
margin_right = 640.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "S-start R-restart M-home menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
[connection signal="porazka" from="." to="." method="_on_mapa_porazka"]
[connection signal="start" from="." to="mrowka" method="_on_mapa_start"]
[connection signal="start" from="." to="Timer" method="_on_mapa_start"]
[connection signal="zwyciestwo" from="." to="." method="_on_mapa_zwyciestwo"]
[connection signal="koniec" from="mrowka" to="." method="_on_mrowka_koniec"]
[connection signal="koniec" from="mrowka" to="Timer" method="_on_mrowka_koniec"]
[connection signal="nowy_punkt" from="mrowka" to="Timer" method="_on_mrowka_nowy_punkt"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="mrowka" method="_on_Timer_timeout"]
[connection signal="timeout" from="wygrana" to="." method="_on_wygrana_timeout"]
